package nl.novi.user;

public enum Role {
  USER, ADMIN
}
