@startuml class-diagram

title Noviaal Class Diagram

Note -- User

class User {
  - UUID     id
  - String   email
  - String   password
  - String   name
  - Role     roles
  - DateTime joined
}

enum Role {
  USER
  ADMIN
}

User -- Role

abstract class Item {
  - UUID id
  - DateTime created
}

together {
  class Note extends Item {
    - String title
    - String body
  }

  class Media extends Item {
    - Binary foto
    - String name
    - String contentType
  }
}

class Follow {
  - UUID id
  - DateTime since
}
User -- Follow
Follow -- User

class Tag {
  - String name
}
Item -- Tag

class Comment {
  - DateTime created
  - String comment
  - Integer stars
}
Item -- Comment
User -- Comment

@enduml
